delete verify
